# sparql-file

./: Containerfile  README.md  Taskfile.yaml  doap.ttl  pyproject.toml  sparql_file.py  sparql_file_cli.py  sparql_file_env.py
.github/workflows/: oci-publish.yml
sparql_file/: __init__.py  cli.py  env.py
tests/: test_api.py  test_cli.py  test_env.py
tests/data/: example_dataset.trig
