[project]
name = "sparql-file"
version = "0.1.0"
description = ""
authors = [
    {name = "Natanael Arndt",email = "arndtn@gmail.com"}
]
license = {text = "GPLv3+"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rdflib-endpoint (>=0.5.1,<0.6.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
